--- a/css/style.css
+++ b/css/style.css
@@ -9317,8 +9317,8 @@ textarea.form-control {
     display: inline-block;
     margin-right: 5px;
     margin-bottom: 0;
-    font-size: 12px;
-    text-transform: uppercase;
+    font-size: 14px;
+    /*text-transform: uppercase;*/
     letter-spacing: 2px; }
     .blog-entry .meta span {
       color: #ffbd39; }
