--- a/css/style.css
+++ b/css/style.css
@@ -8973,7 +8973,7 @@ h1, h2, h3, h4, h5,
     transition: all 0.3s ease; }
     @media (max-width: 767.98px) {
       .project .overlay {
-        opacity: .2; } }
+        opacity: .0; } }
   .project .text {
     max-width: 80%;
     z-index: 1;
@@ -8984,22 +8984,33 @@ h1, h2, h3, h4, h5,
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease; }
     .project .text h3 {
-      font-size: 20px; }
+      font-size: 20px;
+      font-weight: 500; }
       .project .text h3 a {
         color: #fff; }
-    .project .text span {
-      color: rgba(255, 255, 255, 0.8);
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      font-size: 12px;
-      font-weight: 600; }
+      .project .text span {
+        color: rgba(255, 255, 255, 0.8);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 14px;
+        font-weight: 600; }
+      .project .text p {
+        color: rgba(255, 255, 255, 0.8);
+        /*letter-spacing: 2px;*/
+        font-size: 13px;
+        font-weight: 600; }
+      .project .text p a {
+        text-transform: capitalize;
+        color: rgba(255, 255, 255, 0.8);
+        text-decoration: underline;
+      }
     @media (max-width: 767.98px) {
       .project .text {
-        opacity: 1; }
+        opacity: 0; }
         .project .text span {
           color: rgba(255, 255, 255, 0.8); } }
   .project:hover .overlay, .project:focus .overlay {
-    opacity: .9; }
+    opacity: .95; }
   .project:hover .text, .project:focus .text {
     opacity: 1; }
 
